--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-title: "[Your Name] - GIS Portfolio"
+title: "Jared L. Smith - GIS Portfolio"
 description: "BAS in Geospatial Science, Front Range Community College"
