--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 title: "Jared L. Smith - GIS Portfolio"
-description: "BAS in Geospatial Science, Front Range Community College"
+description: "M.A. in Sustainable Urban Development & Professional Certificate in GIS, DePaul University"
